resources/k8s/111-statefulset-gateway.yaml
# SPDX-License-Identifier: MIT-0

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wasmbed-gateway
  namespace: wasmbed
spec:
  serviceName: wasmbed-gateway-service
  replicas: 3
  selector:
    matchLabels:
      app: wasmbed-gateway
  template:
    metadata:
      labels:
        app: wasmbed-gateway
    spec:
      serviceAccountName: wasmbed-gateway
      containers:
        - name: wasmbed-gateway
          command: ["wasmbed-gateway"]
          image: wasmbed-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4423
              name: tls
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: wasmbed-tls-secret
              mountPath: /etc/wasmbed-gateway/certs
              readOnly: true
            - name: wasmbed-ca-secret
              mountPath: /etc/wasmbed-gateway/ca
              readOnly: true
      volumes:
        - name: wasmbed-tls-secret
          secret:
            secretName: wasmbed-tls-secret-rsa
        - name: wasmbed-ca-secret
          secret:
            secretName: wasmbed-ca-secret-rsa
