resources/k8s/110-service-gateway.yaml
# SPDX-License-Identifier: MIT-0

apiVersion: v1
kind: Service
metadata:
  name: wasmbed-gateway-service
  namespace: wasmbed
spec:
  type: NodePort
  ports:
    - name: tls
      port: 4423
      targetPort: 4423
      nodePort: 30423
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    app: wasmbed-gateway
